--- a/00. README.md
+++ b/00. README.md
@@ -3,10 +3,11 @@
 Data source: https://www.kaggle.com/ander289386/cars-germany.
 
 Applied Methods: 
-PriceAnalysis.R: Random Forest. (date: 2021-09-06 )
-DecisionTree_Models.R: Decision Tree, including w/ cv & w/o cv, hyperparameter (date: 2021-09-14)
-Bagged_RandomForest_Models.R Bagged trees including w/ cv & w/o cv, , Random Forest (date: 2021-09-15)
-Boosted Trees: BoostedTrees including w/ cv & w/o cv, w/ tuning (date: 2021-09-16)
+01. PriceAnalysis.R: Random Forest. (date: 2021-09-06 )
+02. DecisionTree_Models.R: Decision Tree, including w/ cv & w/o cv, hyperparameter (date: 2021-09-14)
+03. Bagged_RandomForest_Models.R Bagged trees including w/ cv & w/o cv, , Random Forest (date: 2021-09-15)
+04. Boosted Trees: BoostedTrees including w/ cv & w/o cv, w/ tuning (date: 2021-09-16)
+05. Decision Trees plots (date: 20210916)
 
 Comparison summary of mae, rmse by using above methods could be find in the 'Evaluations Summary Based on Different Models.png' file.
 
